<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="24dp">

    <com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/share_switch" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pref_explore_sharing_title" />

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/pref_explore_username_title" />

    <EditText android:id="@+id/username_edit" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:hint="@string/pref_explore_username_hint" android:maxLength="20" android:inputType="textVisiblePassword" />

    <LinearLayout android:id="@+id/friends_section" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingTop="12dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical">
            <EditText android:id="@+id/input_search" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:hint="@string/search"/>
            <Button android:id="@+id/btn_search" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search"/>
        </LinearLayout>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/friends_accepted"/>
        <TextView android:id="@+id/tv_accepted" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/friends_incoming"/>
        <TextView android:id="@+id/tv_incoming" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/friends_outgoing"/>
        <TextView android:id="@+id/tv_outgoing" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>